# mlops_anomaly_detection

./: .gitignore  Makefile  README.md  default.env  main.py  mlflow_test.py  notes.txt  pyproject.toml  requirements.txt  run-all.sh  temp.py
api/: main.py  predict.py  pyproject.toml
apps/airflow/: Dockerfile  default.env  docker-compose.yml
apps/data/: Dockerfile  default.env  docker-compose.yml  pyproject.toml
apps/data/src/: analyze_data.py  main.py  visualize_data.py
apps/data/src/data/: analyze_data.py  ingest_data.py  load_data.py
apps/minio/: default.env  docker-compose.yml
apps/mlflow/: Dockerfile  add_users.py  default.env  docker-compose.yml
apps/modeling/: .dockerignore  Dockerfile  default.config.json  default.env  docker-compose.yml  pyproject.toml
apps/modeling/src/evaluation/: evaluate_model.py  evaluate_patching.py
apps/modeling/src/modeling/: tools.py
apps/modeling/src/modeling/evaluation/: evaluate_model.py  evaluate_patching.py  evaluate_simple.py
apps/modeling/src/modeling/loading/: load_config.py  load_initial_models.py  load_raw_data.py  visualize_data.py
apps/modeling/src/modeling/preprocessing/: create_patches.py  preprocess_data.py  train_test_split.py
apps/modeling/src/modeling/setup/: load_initial_models.py
apps/modeling/src/modeling/training/: train_model.py
apps/modeling/src/preprocessing/: create_patches.py  preprocess_data.py
apps/modeling/src/training/: train_model.py
apps/monitoring/: README.md  default.env  docker-compose.yml
apps/monitoring/evidently/: Dockerfile  README.md  pyproject.toml
apps/monitoring/evidently/configs/: evidently_data_drift.yaml  evidently_data_quality.yaml  evidently_model_quality.yaml
apps/monitoring/evidently/src/: __init__.py  datasets.py  export_prom_metrics.py  reports.py  run_monitoring.py
apps/prediction/: Dockerfile  README.md  default.env  docker-compose.yml  pyproject.toml
apps/prediction/scripts/: send_prediction_event.sh
apps/prediction/src/: main.py  predict.py
apps/prediction/src/monitoring/: __init__.py  events.py  labeling.py  metrics.py
demo/: pyproject.toml
demo/figures/: architecture.excalidraw
demo/src/: app.py  prediction.py
models/bottle/: config.json  model.keras  report.json
models/cable/: config.json  model.keras  report.json
models/capsule/: config.json  model.keras  report.json
models/carpet/: config.json  model.keras  report.json
models/grid/: config.json  model.keras  report.json
models/hazelnut/: config.json  model.keras  report.json
models/leather/: config.json  model.keras  report.json
models/metal_nut/: config.json  model.keras  report.json
models/pill/: config.json  model.keras  report.json
models/screw/: config.json  model.keras  report.json
models/tile/: config.json  model.keras  report.json
models/toothbrush/: config.json  model.keras  report.json
models/transistor/: config.json  model.keras  report.json
models/wood/: config.json  model.keras  report.json
models/zipper/: config.json  model.keras  report.json
references/: evidently_RefGen.py
src/api/: app.py
src/data/: analyze_data.py  default.env  load_data.py  train_test_split.py  visualize_data.py
src/evaluation/: evaluate_model.py  evaluate_patching.py  evaluate_simple.py
src/modeling/: default.config.json  default.env
src/prediction/: __init__.py  predict.py  test.py
src/preprocessing/: create_patches.py  preprocess_data.py  train_test_split.py
(+43 files in other folders)
