[project]
name = "mlops-anomaly-detection"
version = "0.1.0"
description = "Anomaly Detection with MVTEC MAD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "keras==3.12.0",
    "opencv-python==4.12.0.88",
    "pandas==2.3.3",
    "python-multipart>=0.0.9",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "tensorflow==2.20.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pip>=26.0.1",
    "py-make>=0.1.2",
]
