[project]
name = "monitoring-evidently"
version = "0.1.0"
description = "Evidently monitoring job/exporter"
requires-python = "~=3.12.0"
dependencies = [
  "evidently==0.7.20",
  "pandas==2.2.0",
  "pyarrow==18.0.0",
  "prometheus-client==0.22.1",
  "mlflow==3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
